# ai-mafia-league

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: 01_vision.md  02_game_rules.md  03_system_design.md  04_player_agent.md  05_context_management.md  06_tech_stack.md  07_future_features.md  07_implementation_plan.md  README.md  architecture.md  character_pipeline.md  database.sql  engine_foundations.md  replay_vision.md  scene_pipeline.md  schemas.py  style_bible.md  system_overview.md
docs/viewer/: art_pipeline.md
scripts/: pretty_log.py  provider_smoke.py
src/: __init__.py  config.py
src/engine/: __init__.py  context.py  events.py  game.py  phases.py  prompts.py  run.py  state.py  transcript.py  voting.py
src/personas/: PERSONA_GUIDE.md  __init__.py  alice.py  ballerina_cappuccina.py  bob.py  bombardiro.py  cappuccino_assassino.py  charlie.py  diana.py  eve.py  gigachad.py  grace.py  initial.py  machiavelli.py  patapim.py  sherlock_holmes.py  sun_tzu.py  tralalero.py  tung_tung_tung_sahur.py  yagami_light.py
src/players/: __init__.py  actions.py  agent.py
src/providers/: __init__.py  anthropic.py  base.py  google.py
src/schemas/: __init__.py  (+4 more)
tasks/: README.md  phase1.md  phase10.md  phase11.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md  phase_alignment_todos.md  phase_checks.md  roadmap.md
tests/: __init__.py  conftest.py  sgr_helpers.py  test_context.py  test_database.py  test_game.py  test_player.py  test_providers.py  test_schemas.py  test_state.py
viewer/: index.html  package-lock.json  package.json
(+21 files in other folders)
